# scratchpad

./: README.md
hardware/Smart dual relay board/: 1-PCB_PCB_ESP32UE.json  1-Schematic_Smart dual relay board.json  README.txt  readme.md
mico264/: CMakeLists.txt  README.md
mico264/apps/: CMakeLists.txt  main.c
mico264/include/: basic.h
mico264/src/: CMakeLists.txt  basic.c  logger.c
pico-asm/: CMakeLists.txt  README.md
pico-asm/add96/: CMakeLists.txt  add96.S
pico-asm/do_until/: CMakeLists.txt  do_until.S
pico-asm/helloworld/: CMakeLists.txt  HelloWorld.S
pico-asm/movaddsubshift/: CMakeLists.txt  movaddsubshift.S
pico-asm/reg_to_ascii/: CMakeLists.txt  reg_to_ascii.S
pico-asm/reg_to_ascii_64/: CMakeLists.txt  reg_to_ascii_64.S
pico-asm/scripts/: cmaked  gdbm  ocd  uart
pico-asm/select_case/: CMakeLists.txt  select_case.S
pico-asm/to_upper/: CMakeLists.txt  to_upper.S
pio_blink/: CMakeLists.txt  blink.pio  pio_blink.c
